--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,14 +2,14 @@
 
 .navbar {
 	margin-bottom: 0px;
-	min-height: 100px;
+	min-height: 60px;
 	background-color: #445565;
 	border: 0px;
 	border-radius: 0px;
 }
 
 .navbar-default .navbar-header {
-	min-height: 100px;
+	min-height: 60px;
 }
 
 .navbar-default .navbar-toggle {
@@ -23,7 +23,7 @@
 }
 
 .navbar-collapse{
-	padding-top: 40px;
+	padding-top: 10px;
 	color: white;
 }
 
@@ -34,6 +34,7 @@
 }
 
 .navbar-default .navbar-nav>li>a {
+	font-size: 14px;
 	color: white;
 }
 
