--- a/css/timeline.css
+++ b/css/timeline.css
@@ -164,13 +164,17 @@ Main Components
 }
 @media only screen and (min-width: 1100px) {
   .cd-horizontal-timeline {
-    margin: 6em auto;
+    /*margin: 6em auto;*/
   }
   .cd-horizontal-timeline::before {
     /* never visible - this is used in jQuery to check the current MQ */
     content: 'desktop';
   }
 }
+
+.events-content li{
+  text-align: center;
+} 
 
 .cd-timeline-navigation a {
   /* these are the left/right arrows to navigate the timeline */
@@ -240,7 +244,7 @@ Main Components
 .cd-horizontal-timeline .events-content {
   position: relative;
   width: 100%;
-  margin: 10px 0;
+  margin: 0;
   overflow: hidden;
   -webkit-transition: height 0.4s;
   -moz-transition: height 0.4s;
