--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body, html {
+/*body, html {
 	margin:0;
 	padding:0;
 	font-family:Arial, Helvetica, sans-serif;
@@ -64,6 +64,7 @@ a img, img {border:none;}
 
 .splash-text {
 	color: #A3A3A5;
+	font-size: 1.2em;
 	max-width: 620px;
 	margin: auto;
 	padding-top: 10px;
@@ -1756,4 +1757,4 @@ ul.dropdown ul li#products div.dropdown_right {
 }
 .main_description{
 	overflow: auto;
-}
+}*/
